V1.2: Fix footer overlapping at certain viewports

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,9 +43,11 @@ em {
 }
 
 .npc-gen-grid {
+    min-height: 100vh;
     display: grid;
     place-content: center;
     grid-gap: 1rem;
+    grid-template-rows: repeat(5, min-content) 1fr;
 
     div.sections {
         border-top: 1px solid $border-color;
@@ -61,8 +63,7 @@ em {
     }
 
     .link {
-        place-self: center;
-
+        place-self: end center;
         margin-bottom: 0.5rem;
         font-size: 0.6rem;
         color: grey;
@@ -130,9 +131,25 @@ em {
         margin: auto;
 
         .link {
-            position: absolute;
-            bottom: 0;
             font-size: 0.8rem;
         }
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    h1 {
+        font-size: 2.8rem;
+    }
+}
+
+@media only screen and (min-width: 1366px) {
+    h1 {
+        font-size: 3.8rem;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    h1 {
+        font-size: 4rem;
     }
 }
